--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="description" content="CS4241 Assignment 4">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CS4241 A4 Katherine Tse</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -14,36 +13,48 @@
     <!-- get rid of favicon error -->
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
   </head>
-  <body>
-    <header class="bg-primary bg-opacity-50">
-      <hr />
-      <div style="height: 100px" class="container-fluid d-flex">
+  <body class="flex flex-col min-h-screen max-w-screen">
+    <header class="my-1">
+      <div style="height: 100px" class="flex m-2 px-3 py-1 bg-blue-500/50 rounded-xl">
         <!-- Image on left of header -->
-        <img id="gymnastHandstand" src="src/assets/gymnastHandstand.png" class="text-end" alt="Silhouette of a gymnast doing a handstand" />
+        <img id="gymnastHandstand" src="src/assets/gymnastHandstand.png" class="flex-none py-1 px-2" alt="Silhouette of a gymnast doing a handstand" />
 
         <!-- Title and form display buttons in header -->
-        <div class="headerCenter align-self-center flex-grow-1 p-4">
-          <h1>Gymnastics Competition Personal Score Tracker</h1>
-          <h2>Keep Track of All Your Scores in Once Place</h2>
+        <div class="headerCenter flex-1 content-center px-3">
+          <h1 class="text-4xl font-['Raleway']">Gymnastics Competition Personal Score Tracker</h1>
+          <h2 class="text-2xl">Keep Track of All Your Scores in Once Place</h2>
         </div>
       </div>
-      <hr />
     </header>
-    <div id="root"></div>
+    <div id="root" class="flex-grow"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <footer class="fixed-bottom text-center">
-      <div class="bg-primary bg-opacity-25">
-        <hr id="footerTopLine" />
-        <!-- Footer Title -->
-        <h3 class="footerThanks">More Gymnastics Information</h3>
+    <footer>
+      <div class="flex flex-row-reverse justify-between bg-blue-500/25 py-2">
+        <div class="flex flex-row-reverse px-3 py-1">
+          <div class="me-10">
+            <h3 class="text-xl">Credits</h3>
+            <a class="underline hover:no-underline text-[#001CB6] text-[18px]" href="https://www.flaticon.com/free-icons/vaulting" title="vaulting icons">Vaulting icons created by gravisio - Flaticon</a><br />
+            <a class="underline hover:no-underline text-[#001CB6] text-[18px]" href="https://www.flaticon.com/free-icons/uneven" title="uneven icons">Uneven icons created by Nsit - Flaticon</a><br />
+            <a class="underline hover:no-underline text-[#001CB6] text-[18px]" href="https://www.flaticon.com/free-icons/gymnastics" title="gymnastics icons">Gymnastics icons created by Freepik - Flaticon</a><br />
+            <a class="underline hover:no-underline text-[#001CB6] text-[18px]" href="https://www.flaticon.com/free-icons/gymnastics" title="gymnastics icons">Gymnastics icons created by Freepik - Flaticon</a><br />
+            <a class="underline hover:no-underline text-[#001CB6] text-[18px]" href="https://www.flaticon.com/free-icons/medal" title="medal icons">Medal icons created by Freepik - Flaticon</a>
+          </div>
 
-        <!-- Footer Links -->
-        <nav>
-          <a class="link-dark link-offset-1 link-underline link-underline-dark link-underline-opacity-25-hover" href="https://usagym.org/">USA Gymnastics Site</a> |
-          <a class="link-dark link-offset-1 link-underline link-underline-dark link-underline-opacity-25-hover" href="https://www.meetscoresonline.com/">Meet Scores Online Site</a> |
-          <a class="link-dark link-offset-1 link-underline link-underline-dark link-underline-opacity-25-hover" href="https://nationalgym.org/">National Gymnastics Association Site</a>
-        </nav>
-        <hr id="footerBottomLine"/>
+          <div class="me-30">
+            <!-- Footer Title -->
+            <h3 class="footerThanks text-xl">More Gymnastics Information</h3>
+
+            <!-- Footer Links -->
+            <nav class="pb-2 ps-2">
+              <a class="underline hover:no-underline text-[#001CB6] text-[18px]" href="https://usagym.org/">USA Gymnastics Site</a><br />
+              <a class="underline hover:no-underline text-[#001CB6] text-[18px]" href="https://www.meetscoresonline.com/">Meet Scores Online Site</a><br />
+              <a class="underline hover:no-underline text-[#001CB6] text-[18px]" href="https://nationalgym.org/">National Gymnastics Association Site</a>
+            </nav>
+          </div>
+        </div>
+        <div class="flex items-center">
+          <img src="src/assets/gymnastSplit.png" class="ms-2 flex-none h-30 w-auto" alt="Silhouette of a gymnast doing a split jump" />
+        </div>
       </div>
     </footer>
   </body>
