i think most of the features I will be adding for the main app

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         <div class="flex flex-row-reverse px-3 py-1">
           <div class="me-10">
             <h3 class="text-xl">Credits</h3>
-            <a class="underline hover:no-underline text-[#001CB6] text-[18px]" href="https://www.flaticon.com/free-icons/vaulting" title="vaulting icons">Vaulting icons created by gravisio - Flaticon</a><br />
-            <a class="underline hover:no-underline text-[#001CB6] text-[18px]" href="https://www.flaticon.com/free-icons/uneven" title="uneven icons">Uneven icons created by Nsit - Flaticon</a><br />
-            <a class="underline hover:no-underline text-[#001CB6] text-[18px]" href="https://www.flaticon.com/free-icons/gymnastics" title="gymnastics icons">Gymnastics icons created by Freepik - Flaticon</a><br />
-            <a class="underline hover:no-underline text-[#001CB6] text-[18px]" href="https://www.flaticon.com/free-icons/gymnastics" title="gymnastics icons">Gymnastics icons created by Freepik - Flaticon</a><br />
-            <a class="underline hover:no-underline text-[#001CB6] text-[18px]" href="https://www.flaticon.com/free-icons/medal" title="medal icons">Medal icons created by Freepik - Flaticon</a>
+            <a class="underline hover:no-underline text-[#001CB6] text-[18px] ps-2" href="https://www.flaticon.com/free-icons/vaulting" title="vaulting icons">Vaulting icons created by gravisio - Flaticon</a><br />
+            <a class="underline hover:no-underline text-[#001CB6] text-[18px] ps-2" href="https://www.flaticon.com/free-icons/uneven" title="uneven icons">Uneven icons created by Nsit - Flaticon</a><br />
+            <a class="underline hover:no-underline text-[#001CB6] text-[18px] ps-2" href="https://www.flaticon.com/free-icons/gymnastics" title="gymnastics icons">Gymnastics icons created by Freepik - Flaticon</a><br />
+            <a class="underline hover:no-underline text-[#001CB6] text-[18px] ps-2" href="https://www.flaticon.com/free-icons/gymnastics" title="gymnastics icons">Gymnastics icons created by Freepik - Flaticon</a><br />
+            <a class="underline hover:no-underline text-[#001CB6] text-[18px] ps-2" href="https://www.flaticon.com/free-icons/medal" title="medal icons">Medal icons created by Freepik - Flaticon</a>
           </div>
 
           <div class="me-30">
