--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="description" content="CS4241 Assignment 4">
+    <meta name="description" content="CS4241 Final Project">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CS4241 A4 Katherine Tse</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
