--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="description" content="CS4241 Final Project">
+    <meta name="description" content="CS4241 Final Project Katherine Tse">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CS4241 A4 Katherine Tse</title>
+    <title>CS4241 Final Project Katherine Tse</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
